tune logistic regression using GridSearchCv

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2996,12 +2996,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "ef943906-e71c-4b54-a714-afae407bb0e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8688524590163934"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate the Randomized search RandomForestClassifier model\n",
+    "rs_rf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd204272-4893-4d93-866b-df3886b0d760",
+   "metadata": {},
+   "source": [
+    " ## Hyperparameter Tunning with GridSearchCV\n",
+    "\n",
+    "Since our LogisticRegression model provides the best score so far, we'll try and improve the scores using GridSearchCV..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dbb44178-d2bf-4e89-aa37-5af75d914399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Different hyperparameters for our LogisticRegression model\n",
+    "log_reg_grid = {\"C\": np.logspace(-4, 4, 30),\n",
+    "                \"solver\": [\"liblinear\"]}\n",
+    "\n",
+    "# Setup grid hyperparameter search for LogisticRegression\n",
+    "gs_log_reg = GridSearchCV(LogisticRegression(), \n",
+    "                          param_grid=log_reg_grid,\n",
+    "                          cv=5,\n",
+    "                          verbose=True)\n",
+    "\n",
+    "# Fit grid hyperparameter search model\n",
+    "gs_log_reg.fit(X_train, y_train);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e7deb22-ba09-40dc-991f-b88a73b98837",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate "
+    "# Check the best hyperparameters \n",
+    "\n",
+    "gs"
    ]
   }
  ],
