confusion matrix of our model

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -3235,11 +3235,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b93087e3-9567-4f6f-a22f-ac398e410282",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[25  4]\n",
+      " [ 3 29]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix\n",
+    "print(confusion_matrix(y_test, y_preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5879a1f-bd2a-48a8-80b7-709efa6ab982",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.set(font_size=1.5)\n",
+    "\n",
+    "# incase we need to plot another one\n",
+    "def plot_conf_mat(y_test, y_preds):\n",
+    "    \"\"\"\n",
+    "    Plots a nice looking confusion matrix using Seaborn's heatmap() func\n",
+    "    \"\"\"\n",
+    "    fig, ax = plt.subplots(figsize=(3, 3))\n",
+    "    ax = sns.heatmap(confusion_matrix(y_test, y_preds),\n",
+    "                     annot=True,\n",
+    "                     cbar=False)\n",
+    "    plt.xlabel(\"True label\")\n",
+    "    plt.ylabel(\"Predicted label\")\n",
+    "\n",
+    "plot_conf_mat"
+   ]
   }
  ],
  "metadata": {
