cross-validated metrics(accuracy, precision, recall, f1-score)

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -3326,14 +3326,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "984f2e25-9ff8-4786-871b-5280c012331c",
+   "metadata": {},
+   "source": [
+    "### Calculate evaluation metrics using cross-validation\n",
+    "\n",
+    "we need a cross-validation score for precision, recall and f1 the above classification is on one test data\n",
+    "\n",
+    "`cross_val_score`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "0bc1c72c-c394-4ecd-aa08-fe9d2e81d58e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 0.20433597178569418, 'solver': 'liblinear'}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check best hyperparameters \n",
+    "gs_log_reg.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "8f3b64f7-a196-4288-8916-2795fe0d9c5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we need a cross-validation score for precision, recall and f1\n",
-    "# the above classification is on one test data"
+    "# create a new classifier with best parameters\n",
+    "clf = LogisticRegression(C=0.20433597178569418, \n",
+    "                         solver=\"liblinear\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "160625ef-46d5-4af6-a1d5-bcc408fa0e8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.81967213, 0.90163934, 0.86885246, 0.88333333, 0.75      ])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cross-Validated accuracy\n",
+    "cv_acc = cross_val_score(clf, \n",
+    "                         X, \n",
+    "                         y, \n",
+    "                         cv=5,\n",
+    "                         scoring=\"accuracy\")\n",
+    "cv_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5eeac05c-6906-4986-8125-1c0b5dbe1dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8446994535519124"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_acc = np.mean(cv_acc)\n",
+    "cv_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "37e57f83-56cf-4bcd-8c87-9c3cd7178e01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8207936507936507"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cross-validated precision\n",
+    "cv_precision = cross_val_score(clf, \n",
+    "                         X, \n",
+    "                         y, \n",
+    "                         cv=5,\n",
+    "                         scoring=\"precision\")\n",
+    "cv_precision = np.mean(cv_precision)\n",
+    "cv_precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "e02bf97f-1163-4a41-9b5a-ec9b5a6303ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9212121212121213"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cross-validated recall\n",
+    "cv_recall = cross_val_score(clf, \n",
+    "                         X, \n",
+    "                         y, \n",
+    "                         cv=5,\n",
+    "                         scoring=\"recall\")\n",
+    "cv_recall = np.mean(cv_recall)\n",
+    "cv_recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c50c5d-56d3-4882-a1c9-1fbe1fedc755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cross-validated f1\n",
+    "cv_recall = cross_val_score(clf, \n",
+    "                         X, \n",
+    "                         y, \n",
+    "                         cv=5,\n",
+    "                         scoring=\"recall\")\n",
+    "cv_recall = np.mean(cv_recall)\n",
+    "cv_recall"
    ]
   }
  ],
