--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -3534,9 +3534,252 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "177ed6e4-4a72-4a4d-aeba-9f92659b988d",
+   "metadata": {},
+   "source": [
+    "### Feature Importance\n",
+    "\n",
+    "Feature importance is another way of revealing \"Which features contributed the most to the outcomes of the model and how did they contribute?\" \n",
+    "\n",
+    "Finding feature importance is different for each machine learning model. One way to find feature importance is to search \"(MODEL NAME) feature importance\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "cc8e40cc-976e-410b-b37d-f11a4e6ce7ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   63    1   3       145   233    1        0      150      0      2.3      0   \n",
+       "1   37    1   2       130   250    0        1      187      0      3.5      0   \n",
+       "2   41    0   1       130   204    0        0      172      0      1.4      2   \n",
+       "3   56    1   1       120   236    0        1      178      0      0.8      2   \n",
+       "4   57    0   0       120   354    0        1      163      1      0.6      2   \n",
+       "\n",
+       "   ca  thal  target  \n",
+       "0   0     1       1  \n",
+       "1   0     2       1  \n",
+       "2   0     2       1  \n",
+       "3   0     2       1  \n",
+       "4   0     2       1  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "35279c23-a1b2-4596-836c-9cb2af900f05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Fit an instance of LogisticRegression\n",
+    "clf = LogisticRegression(C=0.20433597178569418, \n",
+    "                         solver=\"liblinear\")\n",
+    "\n",
+    "clf.fit(X_train, y_train);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "334db421-6171-4639-95a7-8dce09095eee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00316728, -0.86044655,  0.66067042, -0.01156993, -0.00166374,\n",
+       "         0.04386109,  0.31275847,  0.02459361, -0.60413083, -0.56862804,\n",
+       "         0.4505163 , -0.63609898, -0.67663378]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check coef_ (coefficien) -> gives information on how each parameter contribute to our predictions\n",
+    "clf.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d960c918-16a8-4ee9-bdff-6ef6bbf2ae32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 0.0031672809701328098,\n",
+       " 'sex': -0.8604465542018854,\n",
+       " 'cp': 0.6606704161071124,\n",
+       " 'trestbps': -0.011569931839584581,\n",
+       " 'chol': -0.0016637442846940298,\n",
+       " 'fbs': 0.043861090099753856,\n",
+       " 'restecg': 0.3127584688139112,\n",
+       " 'thalach': 0.024593614036076978,\n",
+       " 'exang': -0.6041308274033194,\n",
+       " 'oldpeak': -0.5686280446250761,\n",
+       " 'slope': 0.45051629703183155,\n",
+       " 'ca': -0.6360989766185763,\n",
+       " 'thal': -0.6766337834775279}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Match coef's of features to cols\n",
+    "feature_dict = dict(zip(df.columns, list(clf.coef_[0])))\n",
+    "feature_dict"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "660e5b2d-7eb4-4aa0-b9b8-47c9b64fa46d",
+   "id": "6dc87672-76ad-461e-add0-5103cd2f8c37",
    "metadata": {},
    "outputs": [],
    "source": []
